sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:5: error: '(' expected but identifier found.
  {if plusPetit(pot,pot+1)||
      ^AlgGnomeSort:7: error: '(' expected but identifier found.
   else if pot > 0
           ^