sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var pot = 0 
  while (pot< getNombreValeurs()-1)
  {if plusPetit(pot,pot+1)||
      {pot+=1}
   else if pot > 0
      {echange(pot,pot+1);pot-=1}
   else 
      {echange(pot,pot+1)}}
}